[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/OptionsMenu.gd" type="Script" id=1]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -511, -70 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Holder" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -108.0
margin_right = 67.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="Panel/Holder"]
margin_right = 108.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Settings"

[node name="Volume" type="VBoxContainer" parent="Panel/Holder"]
margin_top = 68.0
margin_right = 108.0
margin_bottom = 140.0

[node name="Master" type="VBoxContainer" parent="Panel/Holder/Volume"]
margin_right = 108.0
margin_bottom = 34.0

[node name="Label2" type="Label" parent="Panel/Holder/Volume/Master"]
margin_right = 108.0
margin_bottom = 14.0
text = "Master Volume"

[node name="MasterVolume" type="HSlider" parent="Panel/Holder/Volume/Master"]
margin_top = 18.0
margin_right = 108.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="Sfx" type="VBoxContainer" parent="Panel/Holder/Volume"]
margin_top = 38.0
margin_right = 108.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="Panel/Holder/Volume/Sfx"]
margin_right = 108.0
margin_bottom = 14.0
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="Panel/Holder/Volume/Sfx"]
margin_top = 18.0
margin_right = 108.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="Graphics" type="VBoxContainer" parent="Panel/Holder"]
margin_top = 144.0
margin_right = 108.0
margin_bottom = 168.0

[node name="AACheck" type="CheckBox" parent="Panel/Holder/Graphics"]
margin_right = 108.0
margin_bottom = 24.0
pressed = true
text = "Anti Aliasing"

[node name="FullScreen" type="CheckBox" parent="Panel/Holder/Graphics"]
visible = false
margin_top = 28.0
margin_right = 108.0
margin_bottom = 52.0
pressed = true
text = "Full"

[node name="Buttons" type="VBoxContainer" parent="Panel/Holder"]
margin_top = 172.0
margin_right = 108.0
margin_bottom = 192.0

[node name="Back" type="Button" parent="Panel/Holder/Buttons"]
margin_right = 108.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Close"

[connection signal="value_changed" from="Panel/Holder/Volume/Master/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="Panel/Holder/Volume/Sfx/SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="toggled" from="Panel/Holder/Graphics/AACheck" to="." method="_on_AACheck_toggled"]
[connection signal="toggled" from="Panel/Holder/Graphics/FullScreen" to="." method="_on_AACheck_toggled"]
[connection signal="pressed" from="Panel/Holder/Buttons/Back" to="." method="_on_Back_pressed"]
